# rm530-5g-integration

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP-SUMMARY.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PACKAGE-READY.txt  PROJECT-STRUCTURE.md  PUBLISH.md  QUICKSTART.md  README.md  RELEASE-2.0.0.md  RELEASE_INSTRUCTIONS.md  STRUCTURE.md  V3-SUMMARY.md  VERSION-2-PLAN.md  publish.sh  pyproject.toml  pytest.ini
.github/: PUBLISH.md  PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: QUICK-PUBLISH.md  api.rst  conf.py  index.rst  make.bat
docs/releases/: RELEASE-3.0.0.md  V3-COMPLETE.md  VERSION-3-PLAN.md
rm530_5g_integration/: __init__.py
rm530_5g_integration.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
rm530_5g_integration/cli/: __init__.py  health.py  setup.py  signal.py  status.py
rm530_5g_integration/config/: __init__.py  defaults.py  loader.py  validator.py
rm530_5g_integration/core/: __init__.py  health.py  manager.py  modem.py  network.py
rm530_5g_integration/docs/: BUILD-PROCESS.md  NEXT-STEPS.md  SETUP-COMPLETE.md  ecm-integration.md  verify-5g.md
rm530_5g_integration/legacy/: comparison-qmi-vs-ecm.md  integration.md
rm530_5g_integration/monitoring/: __init__.py  signal.py  stats.py
rm530_5g_integration/reference/: AT-COMMANDS.md  TROUBLESHOOTING.md
rm530_5g_integration/scripts/: __init__.py  configure_network.py  setup_ecm.py  verify.py
rm530_5g_integration/utils/: __init__.py  exceptions.py  logging.py  retry.py
tests/: __init__.py  conftest.py
tests/unit/: test_config.py  test_modem.py
