[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rm530-5g-integration"
version = "4.0.0"
authors = [
    {name = "Anand", email = "anand@example.com"}
]
description = "Integration tools and scripts for Quectel RM530 5G modem with Raspberry Pi using ECM mode"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["raspberry-pi", "5g", "rm530", "modem", "integration", "ecm", "networking"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking",
    "Topic :: System :: Hardware",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "pyserial>=3.5",
    "pyyaml>=6.0",
    "typing-extensions>=4.0; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "flake8>=6.0",
    "pre-commit>=3.0",
    "typing-extensions>=4.0",
]
rich = [
    "rich>=13.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
    "sphinxcontrib-napoleon>=0.7",
]
all = [
    "rm530-5g-integration[dev,rich]",
]

[project.scripts]
# v2.0 unified commands
rm530-setup = "rm530_5g_integration.cli.setup:main"
rm530-status = "rm530_5g_integration.cli.status:main"
rm530-signal = "rm530_5g_integration.cli.signal:main"
# v3.0 new commands
rm530-health = "rm530_5g_integration.cli.health:main"
# v1.0 legacy commands (for backward compatibility)
rm530-setup-ecm = "rm530_5g_integration.scripts.setup_ecm:main"
rm530-configure-network = "rm530_5g_integration.scripts.configure_network:main"
rm530-verify = "rm530_5g_integration.scripts.verify:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rm530_5g_integration*"]

[tool.setuptools.package-data]
"rm530_5g_integration" = [
    "docs/*.md",
    "reference/*.md",
    "legacy/*.md",
    "scripts/*.sh",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

# mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "requires_hardware: Tests that require actual hardware",
]
